Tue Feb 27 18:44:51 1996  Theodore Y. Ts'o  <tytso@dcl>

	* oid_ops.c: Protect include of unistd.h with HAVE_UNISTD_H

Sun Feb 25 15:39:08 1996  Mark W. Eichin  <eichin@cygnus.com>

	* g_acquire_cred.c, g_delete_sec_context.c, g_dsp_name.c,
	g_dsp_status.c, g_exp_sec_context.c, g_glue.c, g_imp_name.c,
	g_imp_sec_context.c, g_indicate_mechs.c, g_init_sec_context.c,
	g_inq_cred.c, g_rel_buffer.c, g_rel_cred.c, g_rel_name.c,
	g_rel_oid_set.c: include stdio.h to actually get NULL.

Sat Feb 24 16:19:30 1996  Theodore Y. Ts'o  <tytso@dcl>

	* Makefile.in, g_inquire_cred.c, g_inquire_names.c,
		g_inquire_context.c: Renamed files to g_inq_cred.c,
		g_inq_names.c, and g_inq_context.c, respectively.

	* g_acquire_cred.c (gss_add_cred): New GSSAPI V2 function.

	* g_inquire_cred.c (gss_inquire_cred_by_mech): New GSSAPI V2
		function. 

	* g_init_sec_context.c (gss_init_sec_context): Make sure we
		convert the union credential into a mechanism specific
		credential.

	* g_glue.c (__gss_get_mechanism_cred): New function for returning
		the mechanism-specific credential from a union credential.

	* g_inquire_names.c (gss_inquire_names_for_mech): 
	* g_oid_ops.c (gss_str_to_oid, gss_oid_to_str, 
		gss_test_oid_set_member, gss_add_oid_set_member,
		gss_create_empty_oid_set, gss_release_oid): 
	* g_imp_sec_context.c (gss_import_sec_context): 
	* g_exp_sec_context.c (gss_export_sec_context):
	* g_inquire_cred.c (gss_inquire_cred): 
	* g_rel_oid_set.c (gss_release_oid_set): 
	* g_rel_buffer.c (gss_release_buffer): 
	* g_rel_name.c (gss_release_name): 
	* g_imp_name.c (gss_import_name): 
	* g_dsp_name.c (gss_display_name): 
	* g_compare_name.c (gss_compare_name):
	* g_indicate_mechs.c (gss_indicate_mechs):
	* g_dsp_status.c (gss_display_status): 
	* g_unseal.c (gss_unseal, gss_unwrap): 
	* g_seal.c (gss_seal, gss_wrap):
	* g_verify.c (gss_verify, gss_verify_mic): 
	* g_sign.c (gss_sign, gss_get_mic):
	* g_context_time.c (gss_context_time): 